--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -91,3 +91,69 @@ button:hover {
   cursor: pointer;
 }
 
+
+/* For tablets and small laptops */
+@media (max-width: 992px) {
+  .app-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+
+  .vl {
+    display: none;
+  }
+
+  .add-task {
+    padding: 10px 40px;
+    align-items: center;
+  }
+
+  .add-task input,
+  .add-task textarea {
+    max-width: 100%;
+    width: 90%;
+  }
+
+  .add-task button {
+    max-width: 100px;
+    font-size: 15px;
+  }
+
+  .task-list {
+    width: 90%;
+  }
+}
+
+/* mobile screens  */
+@media (max-width: 600px) {
+  .app-container {
+    padding: 10px;
+    gap: 20px;
+  }
+
+  .add-task {
+    padding: 10px 20px;
+  }
+
+  .add-task form {
+    gap: 15px;
+  }
+
+  .add-task input,
+  .add-task textarea {
+    width: 100%;
+  }
+
+  .task-card {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    max-height: none;
+  }
+
+  .task-card button {
+    align-self: flex-end;
+  }
+}
+
